--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,7 @@ form label {
 }
 .couple-half h3 {
   font-family: "Sacramento", Arial, serif;
-  color: #F14E95;
+  color: #556B2F;
   font-size: 30px;
 }
 .couple-half .groom, .couple-half .bride {
